--- a/P02 Team 03/css/main.css
+++ b/P02 Team 03/css/main.css
@@ -1,23 +1,26 @@
 /* Native Elements */
+:root{
 
-/* From https://www.webprocomponents.com/neon-desmon-neon-light-font */
-/* Converted with https://www.fontsquirrel.com/tools/webfont-generator */
-@font-face {
-  font-family: 'neondesmonregular';
-  src: url('neon-desmon-webfont.woff2') format('woff2'),
-       url('neon-desmon-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-
+  /* COLORS */
+  --nav-color: rgb(10, 7, 19);
+  --bg-color: rgb(20, 17, 29);
+  --yellow-accent: rgb(255,255,0);
+  --teal-accent: rgb(0,234,234);
 }
 
 body{
     font-family: sans-serif;
-    background-color: rgb(20, 17, 29); 
-    font-family: 'neondesmonregular', Arial, sans-serif;
+    background-color: var(--bg-color); 
+
 }
 
+h1 {
+  font-size: 3rem;
+}
 
+h2 {
+  font-size: 1.5rem;
+}
 
 
 /* Custom Classes */
@@ -28,38 +31,50 @@ body{
 /* nav bar */
 .navbar {
     overflow: hidden;
-    background-color: rgb(10, 7, 19);
+    background-color: var(--nav-color);
     position: fixed; 
     top: 0; 
     left: 0;
     height: 4rem;
     width: 100%; 
     padding: 2rem;
-    font-family: 'neondesmonregular', Arial, sans-serif;
+    padding-left: 4rem;
+    font-family: 'neon-desmon', Arial, sans-serif;
+    font-weight: bold;
   }
   
 /* links */
   .navbar a {
     float: left;
     display: block;
-    color: yellow;
+    color: #00EAEA;
     text-align: center;
+    font-size: larger;
     padding: 14px 16px;
     text-decoration: none;
+    text-shadow: 0 0 20px var(--teal-accent),
+                0 0 30px var(--teal-accent),
+                0 0 40px var(--teal-accent); 
+    /* Generated with https://unused-css.com/tools/text-shadow-generator?p=21AwAlCZgBwDxBiA7AM2MZyA0pQGZpzwCcAHLgIwbZggAsBCAhgMYCsRGQA */
   }
   
-/*  */
+/* links interactivity */
   .navbar a:hover, .navbar a:focus {
-    background: yellow;
-    color: black;
+    color: yellow;
+    text-shadow: 0 0 20px var(--yellow-accent),
+                0 0 30px var(--yellow-accent),
+                0 0 40px var(--yellow-accent); 
   }
   
 /* Main content */
   .main-body {
     margin-top: 10rem;
-    padding-left: 2rem;
-    background-color: white; 
-    font: white;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    color: lightgray;
+    font-family: 'comfortaa';
   }
+
+  
 
 
