--- a/P02 Team 03/css/flexbox.css
+++ b/P02 Team 03/css/flexbox.css
@@ -17,6 +17,14 @@
     border-radius: 0 0 2rem 0;
 }
 
+.bottom-border-alt{
+    position: relative;
+    border-right: 0.5rem var(--yellow-accent) solid;
+    border-bottom: 0.5rem var(--yellow-accent) solid;
+    padding-top: 1rem;
+    border-radius: 0 0 2rem 0;
+}
+
 .left-border{
     position: relative;
     border-left: 0.5rem var(--yellow-accent) solid;
