In text link + more styling changes

--- a/P02 Team 03/css/flexbox.css
+++ b/P02 Team 03/css/flexbox.css
@@ -39,7 +39,7 @@
     border-top-color: var(--pink-accent);
 }
 
-.bottom-border-yellow{
+.border-yellow{
     padding-top: 0.1rem;
     padding-left: 0rem;
     border-top-width: 0.3rem;
