--- a/P02 Team 03/css/main.css
+++ b/P02 Team 03/css/main.css
@@ -28,6 +28,8 @@ h1{
 
 h2{
   font-size: 1.5rem;
+  font-family: 'neon-desmon', sans-serif;
+  color: var(--pink-accent);
 }
 
 h3{
@@ -46,7 +48,7 @@ a{
 
 a:hover, a:focus{
   color: var(--pink-accent);
-  text-shadow: 0 0 20px var(--pink-accent),
+  text-shadow: 0 0 10px var(--pink-accent),
               0 0 30px var(--pink-accent),
               0 0 40px var(--pink-accent); 
 }
@@ -115,12 +117,35 @@ code{
   width: 15rem;
 }
 
+.button-yellow{
+  display: inline-block;
+  padding: 0.5rem;
+  color: white;
+  background-color: rgb(0,0,0);
+  text-decoration: none;
+  transition-property: background-color; 
+  transition-duration: 0.5s;
+  border-radius: 8%;
+}
 
 
 /* DELETE THIS AFTER */
 .placeholder-img{
   height:15rem;
   width: 25rem;
+}
+
+.nav-example{
+  text-shadow: 0 0 20px var(--yellow-accent),
+              0 0 30px var(--yellow-accent),
+              0 0 40px var(--yellow-accent); 
+  font-family: 'neon-desmon';
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+
+.nav-example:hover, .nav-example:focus{
+  color: var(--pink-accent);
 }
 
 
