--- a/P02 Team 03/css/main.css
+++ b/P02 Team 03/css/main.css
@@ -6,7 +6,7 @@
   --bg-color: rgb(20, 17, 29);
   --yellow-accent: rgb(255,255,0);
   --teal-accent: rgb(0,234,234);
-  --pink-accent: rgb(255,16,240);
+  --pink-accent: rgb(255, 16, 239);
 }
 
 body{
@@ -57,6 +57,7 @@ code{
   background-color: rgb(70,57,79);
   padding: 0.5rem;
   display: block;
+  width: 90%;
 }
 
 /* Custom Classes */
@@ -120,12 +121,33 @@ code{
 .button-yellow{
   display: inline-block;
   padding: 0.5rem;
-  color: white;
-  background-color: rgb(0,0,0);
+  color: black;
+  background-color: var(--yellow-accent);
   text-decoration: none;
   transition-property: background-color; 
   transition-duration: 0.5s;
   border-radius: 8%;
+  cursor: pointer;
+}
+
+.button-yellow:hover{
+  background-color: rgb(255, 255, 0, 0.5);
+}
+
+.button-pink{
+  display: inline-block;
+  padding: 0.5rem;
+  color: white;
+  background-color: var(--pink-accent);
+  text-decoration: none;
+  transition-property: background-color; 
+  transition-duration: 0.5s;
+  border-radius: 8%;
+  cursor: pointer;
+}
+
+.button-pink:hover{
+  background-color: rgb(255, 16, 239, 0.5);
 }
 
 
