--- a/P02 Team 03/css/main.css
+++ b/P02 Team 03/css/main.css
@@ -25,12 +25,18 @@ section{
 
 h1{
   font-size: 3rem;
+  font-family: 'neon-desmon', Arial, sans-serif;
+  font-weight: bolder;
+  color: var(--teal-accent);
 }
 
 h2{
   font-size: 1.5rem;
   font-family: 'neon-desmon', sans-serif;
   color: var(--pink-accent);
+  text-shadow: 0 0 100px var(--pink-accent),
+              0 0 30px var(--pink-accent),
+              0 0 40px var(--pink-accent); 
 }
 
 h3{
@@ -124,7 +130,7 @@ input[type="text"]{
 /* Main content */
 .main-body {
   margin-top: 10rem;
-  padding-left: 5rem;
+  padding-left: 14rem;
   padding-right: 5rem;
   color: lightgray;
   font-family: 'comfortaa';
@@ -217,4 +223,34 @@ input[type="text"]{
 
   text-align: center;
   vertical-align: middle;
+}
+
+.sidebar{
+  height: 100%;
+  width: 10rem;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: var(--nav-color);
+  overflow-x: hidden;
+  filter: drop-shadow(0 0 0.4rem black);
+  padding-top: 2rem;
+  font-family: 'neon-desmon', Arial, sans-serif;
+  font-weight: bold;
+}
+
+.sidebar a{
+  padding: 6px 8px 6px 16px;
+  display: block;
+  border-radius: 1rem 0 0 1rem;
+  text-shadow: 0 0 0px var(--yellow-accent),
+              0 0 20px var(--yellow-accent),
+              0 0 40px var(--yellow-accent); 
+}
+
+.sidebar a:hover, .sidebar a:focus{
+  text-shadow: 0 0 0px var(--pink-accent),
+              0 0 20px var(--pink-accent),
+              0 0 40px var(--pink-accent); 
 }
