--- a/P02 Team 03/css/flexbox.css
+++ b/P02 Team 03/css/flexbox.css
@@ -54,11 +54,23 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 1.5rem;
 }
 
-.flex-item{
+.flex-item{ /* For basic flex needs*/
     flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-flex-item{ /* For Footer Items*/
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-flex-item i{
+    padding: 1rem;
 }
 
