contact page added

--- a/P02 Team 03/css/flexbox.css
+++ b/P02 Team 03/css/flexbox.css
@@ -74,3 +74,9 @@
     padding: 1rem;
 }
 
+.contact-flex-item{ /* For Footer Items*/
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+}
+
