Main Page Finalized

--- a/P02 Team 03/css/bootstrapfix.css
+++ b/P02 Team 03/css/bootstrapfix.css
@@ -10,14 +10,28 @@
 *{ 
     box-sizing: initial !important; 
     font-size: initial !important; 
+    text-decoration: none !important;
 } 
+
+.title-text{
+    font-size: 2rem !important;
+}
 
 div{
     padding-left: 0;
 }
 
 img{
-    max-height: 30rem;
+    max-height: 50rem;
     width: 100%;
     overflow: hidden;
+}
+
+.flex-centered{
+    display: flex;
+    justify-content: center;
+}
+
+.flex-1{
+    flex: 1;
 }
