--- a/P02 Team 03/css/main.css
+++ b/P02 Team 03/css/main.css
@@ -124,6 +124,15 @@ footer p{
   font-weight: 100;
 }
 
+textarea{
+  background-color: rgb(70,57,79);
+  border: 0;
+  color: white;
+  width: 80%;
+  resize: vertical;
+  min-height: 4rem;
+}
+
 
 
 /* Custom Classes */
@@ -344,9 +353,18 @@ footer p{
   font-family: 'comfortaa';
 }
 
+.about-us-text{
+  max-width: 45%;
+}
+
 .img-big{
   max-width: 100%;
 }
 
 .button-large{
-  height: 20rem;
+  height: 3rem;
+}
+
+.width-100{
+  width: 100%;
+}
