Reworked footer to include style guide/citations/github

--- a/P02 Team 03/css/main.css
+++ b/P02 Team 03/css/main.css
@@ -120,6 +120,11 @@ footer h3{
               0 0 40px var(--yellow-accent); 
 }
 
+footer a{
+  display: block;
+  font-weight: lighter;
+}
+
 footer p{
   font-weight: 100;
 }
